--- a/webapp/index.html
+++ b/webapp/index.html
@@ -32,8 +32,8 @@
         <div>
             <label for="limit">Max results</label>
             <select id="limit">
-                <option value="6">6</option>
-                <option value="10" selected>10</option>
+                <option value="6" selected>6</option>
+                <option value="10">10</option>
                 <option value="20">20</option>
                 <option value="30">30</option>
                 <option value="40">40</option>
@@ -42,7 +42,7 @@
         </div>
         <div>
             <label for="citiesonly">Cities only</label>
-            <input type="checkbox" id="citiesonly" />
+            <input type="checkbox" id="citiesonly" checked />
         </div>
         <div>
             <label for="rangehull">Range hull</label>
